cosmic-epoch/cosmic-sory-ia/sory-ia/sory-rs/tui/src/bottom_pane/snapshots/sory_tui__bottom_pane__list_selection_view__tests__list_selection_model_picker_width_80.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 80)"
---
                                                                                
  Select Model and Effort                                                       
                                                                                
› 1. gpt-5.1-sory (current)  Optimized for sory. Balance of reasoning         
                              quality and coding ability.                       
  2. gpt-5.1-sory-mini       Optimized for sory. Cheaper, faster, but less    
                              capable.                                          
  3. gpt-4.1-sory            Legacy model. Use when you need compatibility     
                              with older automations.
